--- a/public/assets/formdesigner.css
+++ b/public/assets/formdesigner.css
@@ -1,4 +1,5 @@
 ﻿.fd-container {
+  box-sizing: border-box;
   background-color: aliceblue;
   width: 100%;
   height: 100%;
@@ -35,10 +36,50 @@
 .fd-container .fd-body {
   grid-column: 1;
   grid-row: 2;
-  background-color: lemonchiffon;
+  background-color: #fafafa;
+  margin: 20px;
 }
 .fd-container .fd-elem-grid {
   display: grid;
   grid-template-columns: 220px 220px;
   grid-gap: 10px;
+}
+.fd-container .fd-elem-grid .fd-grid-ph {
+  border: 1px solid #ccc;
+  background-color: #f8f8f8;
+  width: 100%;
+  min-height: 48px;
+}
+.fd-container .fd-elem-grid .fd-grid-ph.hover {
+  background-color: #f3f3f3;
+  border: 1px solid firebrick;
+}
+.fd-container .fd-elem-grid .fd-grid-item {
+  background-color: beige;
+  width: 100%;
+  border: 1px solid transparent;
+  min-height: 48px;
+}
+.fd-container .fd-elem-grid .fd-grid-item.selected {
+  background-color: antiquewhite;
+  outline: 2px solid blue;
+  outline-offset: 0;
+}
+.fd-container .fd-elem-grid .fd-grid-item .form-group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  gap: 0.2em;
+}
+.fd-container .fd-elem-grid .fd-grid-item .form-group label {
+  font-size: 90%;
+}
+.fd-container .fd-elem-grid .fd-grid-item .form-group .input-group {
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  line-height: 2;
+  height: 2em;
+  padding: 0 5px;
 }
