--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -3,6 +3,7 @@
 @toolbar-heigth: 40px;
 
 .fd-container {
+	box-sizing: border-box;
 	background-color: aliceblue;
 	width: 100%;
 	height: 100%;
@@ -25,17 +26,18 @@
 	ul.fd-tabbar {
 		display: flex;
 		flex-direction: row;
-		margin:0;
-		padding:0;
+		margin: 0;
+		padding: 0;
 
 		li {
 			list-style-type: none;
 			padding: 6px 12px;
 			background-color: lightblue;
 			cursor: pointer;
+
 			&.active {
-				background-color:blue;
-				color:white;
+				background-color: blue;
+				color: white;
 			}
 		}
 	}
@@ -43,13 +45,60 @@
 	.fd-body {
 		grid-column: 1;
 		grid-row: 2;
-		background-color: lemonchiffon;
+		background-color: #fafafa;
+		margin: 20px;
 	}
 
 	.fd-elem-grid {
 		display: grid;
 		grid-template-columns: 220px 220px;
 		grid-gap: 10px;
+
+		.fd-grid-ph {
+			border: 1px solid #ccc;
+			background-color: #f8f8f8;
+			width: 100%;
+			min-height: 48px;
+
+			&.hover {
+				background-color: #f3f3f3;
+				border: 1px solid firebrick;
+			}
+		}
+
+		.fd-grid-item {
+			background-color: beige;
+			width: 100%;
+			border: 1px solid transparent;
+			min-height: 48px;
+
+			&.selected {
+				background-color: antiquewhite;
+				outline: 2px solid blue;
+				outline-offset: 0;
+			}
+
+			.form-group {
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				height: 100%;
+				gap: .2em;
+
+				label {
+					font-size: 90%;
+				}
+
+				.input-group {
+					background: white;
+					border: 1px solid #ccc;
+					border-radius: 4px;
+					line-height: 2;
+					height:2em;
+					padding: 0 5px;
+				}
+			}
+		}
 	}
 }
 
