--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -1,6 +1,12 @@
 
 @taskpad-width: 300px;
 @toolbar-heigth: 40px;
+@min-rh: 28px;
+@min-cw: 20px;
+
+@sel-color: blue;
+
+@bgPrimary: var(--bgPrimary);
 
 .fd-container {
 	box-sizing: border-box;
@@ -11,10 +17,71 @@
 	grid-template-columns: 1fr @taskpad-width;
 	grid-template-rows: @toolbar-heigth 1fr;
 
+	.line {
+		padding: 8px 0;
+
+		hr {
+			border: 0;
+			background-color: lightcoral;
+			height: 2px;
+		}
+	}
+
+
+	.selected {
+		outline: 1px dotted @sel-color;
+		z-index: 10;
+		box-shadow: 0 0 4px @sel-color;
+		position: relative;
+
+		:after {
+			content: "";
+			position: absolute;
+			top: -6px;
+			left: -6px;
+			width: 8px;
+			height: 8px;
+			background-color: white;
+			border: 1px solid @sel-color;
+			z-index: 11;
+		}
+	}
+
 	.fd-taskpad {
 		grid-column: 2;
 		grid-row: 2;
 		background-color: antiquewhite;
+		user-select: none;
+
+		.fd-toolbox {
+			padding: 10px;
+			display: grid;
+			grid-gap: 10px;
+
+			details {
+
+				summary {
+					color: firebrick;
+					font-size: 110%;
+				}
+
+				ul {
+					margin: 10px 0 0 0;
+					padding: 0;
+					display: flex;
+					flex-direction: column;
+					gap: 10px;
+
+					li.fd-tbox-item {
+						list-style-type: none;
+						display: inline-flex;
+						padding: 8px;
+						background-color: white;
+						cursor: default;
+					}
+				}
+			}
+		}
 	}
 
 	.fd-toolbar {
@@ -42,40 +109,51 @@
 		}
 	}
 
+	.fd-main {
+		overflow: auto;
+		display: grid;
+		grid-template-columns: 1fr auto;
+		grid-row:2;
+		grid-column:1;
+	}
+
+	.fd-page-taskpad {
+		grid-column: 2;
+	}
+
 	.fd-body {
 		grid-column: 1;
-		grid-row: 2;
-		background-color: #fafafa;
-		margin: 20px;
+		grid-row: 1;
+		background-color: @bgPrimary;
+		padding: .5rem 1rem;
+		display: flex;
+		flex-direction: column;
+		overflow: visible;
 	}
 
 	.fd-elem-grid {
 		display: grid;
-		grid-template-columns: 220px 220px;
-		grid-gap: 10px;
+		grid-gap: .5rem 1rem;
 
 		.fd-grid-ph {
-			border: 1px solid #ccc;
-			background-color: #f8f8f8;
-			width: 100%;
-			min-height: 48px;
+			border: 1px dotted #d0d0d0;
+			background-color: @bgPrimary;
+			min-height: @min-rh;
+			min-width: @min-cw;
 
 			&.hover {
-				background-color: #f3f3f3;
+				background-color: #f1f1f1;
 				border: 1px solid firebrick;
 			}
 		}
 
 		.fd-grid-item {
-			background-color: beige;
-			width: 100%;
+			background-color: @bgPrimary;
 			border: 1px solid transparent;
-			min-height: 48px;
+			min-height: @min-rh;
 
-			&.selected {
-				background-color: antiquewhite;
-				outline: 2px solid blue;
-				outline-offset: 0;
+			> label {
+				line-height: 2em;
 			}
 
 			.form-group {
@@ -94,8 +172,48 @@
 					border: 1px solid #ccc;
 					border-radius: 4px;
 					line-height: 2;
-					height:2em;
+					height: 2em;
 					padding: 0 5px;
+				}
+			}
+
+			.fd-datagrid {
+				min-height: 80px;
+				width: 100%;
+				height: 120px;
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				border-color: red;
+				border-style: solid;
+				border-width: 1px 0 1px 1px;
+
+				.fd-datagrid-column {
+					border-right: 1px solid red;
+					width: 100%;
+
+					.label {
+						background-color: #f8f8f8;
+						line-height: 2em;
+						padding: 0 10px;
+						border-bottom: 1px solid red;
+					}
+
+					.column {
+						line-height: 2em;
+						padding: 0 10px;
+						background-color: white;
+						border-bottom: 1px solid #ccc;
+					}
+				}
+			}
+
+			.fd-itm-toolbar {
+				height:100%;
+				display:flex;
+				gap: 5px;
+				button {
+					height:100%;
 				}
 			}
 		}
