--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -4,6 +4,11 @@
 @min-rh: 28px;
 @min-cw: 20px;
 
+@prop-brd-color:#ddd;
+
+@datagrid-brd-color: var(--neutral300);
+
+
 @sel-color: blue;
 
 @bgPrimary: var(--bgPrimary);
@@ -22,19 +27,19 @@
 
 		hr {
 			border: 0;
-			background-color: lightcoral;
+			background-color: #ccc;
 			height: 2px;
 		}
 	}
 
 
 	.selected {
-		outline: 1px dotted @sel-color;
+		outline: 1px dotted @sel-color !important;
 		z-index: 10;
-		box-shadow: 0 0 4px @sel-color;
+		box-shadow: 0 0 4px @sel-color !important;
 		position: relative;
 
-		:after {
+		&:not(.handle):after {
 			content: "";
 			position: absolute;
 			top: -6px;
@@ -50,8 +55,27 @@
 	.fd-taskpad {
 		grid-column: 2;
 		grid-row: 2;
-		background-color: antiquewhite;
+		background-color: @bgPrimary;
 		user-select: none;
+
+		ul.fd-tabbar {
+			display: flex;
+			flex-direction: row;
+			margin: 0;
+			padding: 0;
+			background-color: var(--nav100);
+
+			li {
+				list-style-type: none;
+				padding: 6px 12px;
+				background-color: var(--neutral300);
+				cursor: pointer;
+
+				&.active {
+					background-color: @bgPrimary;
+				}
+			}
+		}
 
 		.fd-toolbox {
 			padding: 10px;
@@ -70,7 +94,7 @@
 					padding: 0;
 					display: flex;
 					flex-direction: column;
-					gap: 10px;
+					gap: 6px;
 
 					li.fd-tbox-item {
 						list-style-type: none;
@@ -78,6 +102,14 @@
 						padding: 8px;
 						background-color: white;
 						cursor: default;
+						gap: 6px;
+						align-items: center;
+						border: 1px solid #ccc;
+						border-radius: 4px;
+
+						.ico {
+							color: #999;
+						}
 					}
 				}
 			}
@@ -90,21 +122,30 @@
 		background-color: aquamarine;
 	}
 
-	ul.fd-tabbar {
-		display: flex;
-		flex-direction: row;
-		margin: 0;
-		padding: 0;
+	.fd-propsheet {
+		width: 100%;
 
-		li {
-			list-style-type: none;
-			padding: 6px 12px;
-			background-color: lightblue;
-			cursor: pointer;
+		table {
+			width: 100%;
+			border-collapse: collapse;
+			border-top: 1px solid @prop-brd-color;
 
-			&.active {
-				background-color: blue;
-				color: white;
+			tr {
+				border-bottom: 1px solid @prop-brd-color;
+
+				td {
+					input, select {
+						width: 100%;
+						height: 1.8em;
+					}
+				}
+
+				td:first-child {
+					width: 30%;
+					border-right: 1px solid @prop-brd-color;
+					border-left: 16px solid @prop-brd-color;
+					padding: 0 6px;
+				}
 			}
 		}
 	}
@@ -113,8 +154,10 @@
 		overflow: auto;
 		display: grid;
 		grid-template-columns: 1fr auto;
-		grid-row:2;
-		grid-column:1;
+		grid-row: 2;
+		grid-column: 1;
+		padding: 1rem;
+		background-color: #aaa;
 	}
 
 	.fd-page-taskpad {
@@ -125,10 +168,17 @@
 		grid-column: 1;
 		grid-row: 1;
 		background-color: @bgPrimary;
-		padding: .5rem 1rem;
 		display: flex;
 		flex-direction: column;
 		overflow: visible;
+		padding: .5rem 1rem;
+		border: 1px solid #ccc;
+		margin: auto;
+
+		&.page {
+			width: 100%;
+			height: 100%;
+		}
 	}
 
 	.fd-elem-grid {
@@ -151,9 +201,21 @@
 			background-color: @bgPrimary;
 			border: 1px solid transparent;
 			min-height: @min-rh;
+			position: relative;
 
 			> label {
 				line-height: 2em;
+			}
+
+			.handle {
+				position: absolute;
+				width: 8px;
+				height: 100%;
+				left: -8px;
+				top: 0;
+				background: radial-gradient(circle at 1px 1px, #ccc 1px, transparent 0);
+				background-size: 4px 4px;
+				z-index: 9;
 			}
 
 			.form-group {
@@ -184,36 +246,46 @@
 				display: flex;
 				flex-direction: row;
 				justify-content: space-between;
-				border-color: red;
-				border-style: solid;
-				border-width: 1px 0 1px 1px;
+				border: 1px solid @datagrid-brd-color;
+				border-radius: 4px;
+				position: relative;
 
 				.fd-datagrid-column {
-					border-right: 1px solid red;
 					width: 100%;
 
 					.label {
-						background-color: #f8f8f8;
+						background-color: var(--table-header-bg);
 						line-height: 2em;
 						padding: 0 10px;
-						border-bottom: 1px solid red;
+						border-bottom: 1px solid @datagrid-brd-color;
 					}
 
 					.column {
 						line-height: 2em;
 						padding: 0 10px;
 						background-color: white;
-						border-bottom: 1px solid #ccc;
+						border-bottom: 1px solid @datagrid-brd-color;
 					}
 				}
 			}
 
 			.fd-itm-toolbar {
-				height:100%;
-				display:flex;
+				height: 100%;
+				display: flex;
 				gap: 5px;
+
 				button {
-					height:100%;
+					height: 100%;
+				}
+			}
+
+			.btn-tb {
+				outline-offset: 0;
+
+				&:hover {
+					box-shadow: none;
+					outline: 0;
+					transition: none;
 				}
 			}
 		}
