--- a/public/assets/formdesigner.css
+++ b/public/assets/formdesigner.css
@@ -130,13 +130,20 @@
   display: flex;
   flex-direction: column;
   overflow: visible;
-  padding: 0.5rem 1rem;
   border: 1px solid #ccc;
   margin: auto;
 }
 .fd-container .fd-body.page {
   width: 100%;
   height: 100%;
+  padding: 0.5rem 1rem;
+}
+.fd-container .fd-body.dialog {
+  border-radius: 8px;
+  box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
+}
+.fd-container .fd-body.dialog .fd-content {
+  padding: 1rem;
 }
 .fd-container .fd-elem-grid {
   display: grid;
@@ -170,6 +177,11 @@
   background: radial-gradient(circle at 1px 1px, #ccc 1px, transparent 0);
   background-size: 4px 4px;
   z-index: 9;
+}
+.fd-container .fd-elem-grid .fd-grid-item .input {
+  width: 100%;
+  padding: 0 5px;
+  height: 2em;
 }
 .fd-container .fd-elem-grid .fd-grid-item .form-group {
   display: flex;
@@ -223,6 +235,12 @@
 .fd-container .fd-elem-grid .fd-grid-item .fd-itm-toolbar button {
   height: 100%;
 }
+.fd-container .fd-elem-grid .fd-grid-item .toolbar .aligner {
+  height: 33px;
+  background-image: repeating-linear-gradient(45deg, #eee 0, #eee 1px, transparent 0, transparent 50%);
+  background-repeat: repeat;
+  background-size: 8px 8px;
+}
 .fd-container .fd-elem-grid .fd-grid-item .btn-tb {
   outline-offset: 0;
 }
@@ -230,4 +248,7 @@
   box-shadow: none;
   outline: 0;
   transition: none;
+}
+.fd-container .btn:focus {
+  outline: none !important;
 }
