--- a/A2v10_Net6A2v10.CoreWebA2v10.Core.Web.Sitewwwrootcssmeta/formdesigner.css
+++ b/A2v10_Net6A2v10.CoreWebA2v10.Core.Web.Sitewwwrootcssmeta/formdesigner.css
@@ -1,11 +1,11 @@
 ﻿.fd-container {
   box-sizing: border-box;
+  background-color: aliceblue;
   width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 300px;
-  grid-template-rows: auto 1fr;
-  outline: none;
+  grid-template-rows: 40px 1fr;
 }
 .fd-container .line {
   padding: 8px 0;
@@ -17,21 +17,20 @@
 }
 .fd-container .selected {
   outline: 1px dotted blue !important;
-  outline-offset: 2px;
   z-index: 10;
+  box-shadow: 0 0 4px blue !important;
   position: relative;
 }
 .fd-container .selected:not(.handle):after {
   content: "";
   position: absolute;
-  top: -2px;
-  left: -2px;
-  right: -3px;
-  bottom: -3px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(100, 200, 255, 0.1);
   pointer-events: none;
   z-index: 11;
-  box-shadow: 0 0 4px cornflowerblue;
 }
 .fd-container .fd-taskpad {
   grid-column: 2;
@@ -88,8 +87,7 @@
 .fd-container .fd-toolbar {
   grid-column: 1 / span 2;
   grid-row: 1;
-  border-bottom: 1px solid #aaa;
-  padding: 7px 14px 7px 14px;
+  background-color: aquamarine;
 }
 .fd-container .fd-propsheet {
   width: 100%;
@@ -146,27 +144,27 @@
 .fd-container .fd-body.dialog {
   border-radius: 8px;
   box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
-  width: 500px;
 }
-.fd-container .fd-body.dialog .modal-header {
-  cursor: default;
+.fd-container .fd-body.dialog .fd-content {
+  padding: 1rem;
 }
 .fd-container .fd-elem-grid {
   display: grid;
   grid-gap: 0.5rem 1rem;
 }
 .fd-container .fd-elem-grid .fd-grid-ph {
-  border: 1px dotted #bbb;
+  border: 1px dotted #d0d0d0;
   background-color: var(--bgPrimary);
   min-height: 28px;
   min-width: 20px;
 }
 .fd-container .fd-elem-grid .fd-grid-ph.hover {
-  background-color: #bbb;
+  background-color: #f1f1f1;
   border: 1px solid firebrick;
 }
 .fd-container .fd-elem-grid .fd-grid-item {
   background-color: var(--bgPrimary);
+  border: 1px solid transparent;
   min-height: 28px;
   position: relative;
 }
