--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -4,7 +4,7 @@
 @min-cw: 20px;
 @canvas-bg:#aaa;
 
-@prop-brd-color:#ddd;
+@prop-brd-color:#eee;
 
 @datagrid-brd-color: var(--neutral300);
 
@@ -35,7 +35,7 @@
 
 	.selected {
 		outline: 1px dotted @sel-color !important;
-		outline-offset:2px;
+		outline-offset: 2px;
 		z-index: 10;
 		position: relative;
 
@@ -130,6 +130,11 @@
 	.fd-propsheet {
 		width: 100%;
 
+		.fd-item-is {
+			padding:0 8px;
+			line-height:2em;
+			font-weight:500;
+		}
 		table {
 			width: 100%;
 			border-collapse: collapse;
@@ -137,6 +142,12 @@
 
 			tr {
 				border-bottom: 1px solid @prop-brd-color;
+
+				.fd-ps-header {
+					font-weight: 500;
+					height: 1.8em;
+					background-color: @prop-brd-color;
+				}
 
 				td {
 					input, select {
@@ -198,7 +209,7 @@
 			}
 
 			.modal-header {
-				cursor:default;
+				cursor: default;
 			}
 		}
 	}
@@ -212,6 +223,8 @@
 			background-color: @bgPrimary;
 			min-height: @min-rh;
 			min-width: @min-cw;
+			width: 100%;
+			height: 100%;
 
 			&.hover {
 				background-color: #bbb;
@@ -226,6 +239,10 @@
 
 			> label {
 				line-height: 2em;
+			}
+
+			.input-group {
+				width: 100%;
 			}
 
 			.handle {
@@ -269,7 +286,8 @@
 			.fd-datagrid {
 				min-height: 80px;
 				width: 100%;
-				height: 120px;
+				min-height: 120px;
+				height: 100%;
 				display: flex;
 				flex-direction: row;
 				justify-content: space-between;
