--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -2,6 +2,7 @@
 @taskpad-width: 300px;
 @min-rh: 28px;
 @min-cw: 20px;
+@tabs-height:34px;
 @canvas-bg:#aaa;
 
 @prop-brd-color:#eee;
@@ -131,10 +132,11 @@
 		width: 100%;
 
 		.fd-item-is {
-			padding:0 8px;
-			line-height:2em;
-			font-weight:500;
+			padding: 0 8px;
+			line-height: 2em;
+			font-weight: 500;
 		}
+
 		table {
 			width: 100%;
 			border-collapse: collapse;
@@ -187,16 +189,25 @@
 		display: flex;
 		flex-direction: column;
 		overflow: visible;
-		border: 1px solid #ccc;
 		margin: auto;
 
 		&.page {
-			width: 100%;
-			height: 100%;
-			padding: .5rem 1rem;
-
 			.fd-content {
 				height: 100%;
+				padding:2px;
+			}
+
+			.fd-tabs-header {
+				height: @tabs-height;
+				background-color: @canvas-bg;
+
+				.fd-tab-title {
+					display: inline-block;
+					line-height: 2.3rem;
+					padding: 0 16px;
+					background-color: @bgPrimary;
+					border-radius: 4px 4px 0 0;
+				}
 			}
 		}
 
