--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -340,8 +340,12 @@
 				border-radius: 4px;
 				position: relative;
 
-				.fd-datagrid-column {
+				table {
 					width: 100%;
+				}
+
+				.fd-datagrid-column {
+					vertical-align: top;
 
 					.label {
 						background-color: var(--table-header-bg);
