--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -10,6 +10,10 @@
 @datagrid-brd-color: var(--neutral300);
 @default-brd-color: var(--neutral300);
 
+@handle-bg-color: lavenderblush;
+@handle-bg-color-active: #F3D5E7;
+@handle-color: #D8007E;
+
 
 @sel-color: blue;
 
@@ -41,6 +45,10 @@
 		z-index: 10;
 		position: relative;
 
+		.fd-grid-handle {
+			background-color: @handle-bg-color-active !important;
+		}
+
 		&.btn:hover {
 		}
 
@@ -51,7 +59,7 @@
 			left: -2px;
 			right: -3px;
 			bottom: -3px;
-			background-color: rgba(100, 200, 255, .1);
+			background-color: rgba(140, 218, 242, .1);
 			pointer-events: none;
 			z-index: 11;
 			box-shadow: 0 0 4px cornflowerblue;
@@ -304,6 +312,7 @@
 				width: 100%;
 				padding: 0 5px;
 				height: 2em;
+				overflow: hidden;
 			}
 
 			.form-group {
@@ -400,12 +409,12 @@
 			top: -9px;
 			width: 18px;
 			height: 18px;
-			background-color: lavenderblush;
+			background-color: @handle-bg-color;
 			border: 1px solid currentColor;
 			border-radius: 3px;
 			line-height: 16px;
 			text-align: center;
-			color: firebrick;
+			color: @handle-color;
 			font-size: 11px;
 			z-index: 12;
 		}
