--- a/public/assets/formdesigner.css
+++ b/public/assets/formdesigner.css
@@ -17,9 +17,10 @@
 }
 .fd-container .selected {
   outline: 1px dotted blue !important;
-  outline-offset: 2px;
+  outline-offset: 1px;
   z-index: 10;
   position: relative;
+  border-radius: 2px;
 }
 .fd-container .selected .fd-grid-handle {
   background-color: #F3D5E7 !important;
@@ -27,14 +28,15 @@
 .fd-container .selected:not(.fd-grid-handle):after {
   content: "";
   position: absolute;
-  top: -2px;
-  left: -2px;
-  right: -3px;
-  bottom: -3px;
-  background-color: rgba(140, 218, 242, 0.1);
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: -1px;
+  background-color: rgba(140, 218, 242, 0.15);
   pointer-events: none;
   z-index: 11;
   box-shadow: 0 0 4px cornflowerblue;
+  border-radius: 2px;
 }
 .fd-container .fd-taskpad {
   grid-column: 2;
@@ -326,7 +328,4 @@
   color: #D8007E;
   font-size: 11px;
   z-index: 12;
-}
-.fd-container .btn:focus {
-  outline: none !important;
 }
