--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -41,9 +41,10 @@
 
 	.selected {
 		outline: 1px dotted @sel-color !important;
-		outline-offset: 2px;
+		outline-offset: 1px;
 		z-index: 10;
 		position: relative;
+		border-radius: 2px;
 
 		.fd-grid-handle {
 			background-color: @handle-bg-color-active !important;
@@ -55,14 +56,15 @@
 		&:not(.fd-grid-handle):after {
 			content: "";
 			position: absolute;
-			top: -2px;
-			left: -2px;
-			right: -3px;
-			bottom: -3px;
-			background-color: rgba(140, 218, 242, .1);
+			top: -1px;
+			left: -1px;
+			right: -1px;
+			bottom: -1px;
+			background-color: rgba(140, 218, 242, .15);
 			pointer-events: none;
 			z-index: 11;
 			box-shadow: 0 0 4px cornflowerblue;
+			border-radius: 2px;
 		}
 	}
 
@@ -421,7 +423,6 @@
 	}
 
 	.btn:focus {
-		outline: none !important;
 	}
 }
 
