--- a/public/assets/formdesigner.css
+++ b/public/assets/formdesigner.css
@@ -44,6 +44,9 @@
   background-color: var(--bgPrimary);
   user-select: none;
   border-left: 1px solid #aaa;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .fd-container .fd-taskpad ul.fd-tabbar {
   display: flex;
@@ -65,6 +68,7 @@
   padding: 10px;
   display: grid;
   grid-gap: 10px;
+  overflow: auto;
 }
 .fd-container .fd-taskpad .fd-toolbox details summary {
   color: firebrick;
@@ -75,12 +79,12 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 4px;
 }
 .fd-container .fd-taskpad .fd-toolbox details ul li.fd-tbox-item {
   list-style-type: none;
   display: inline-flex;
-  padding: 8px;
+  padding: 6px 8px;
   background-color: white;
   cursor: default;
   gap: 6px;
