--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -74,6 +74,9 @@
 		background-color: @bgPrimary;
 		user-select: none;
 		border-left: 1px solid @canvas-bg;
+		overflow: hidden;
+		display: flex;
+		flex-direction: column;
 
 		ul.fd-tabbar {
 			display: flex;
@@ -98,6 +101,7 @@
 			padding: 10px;
 			display: grid;
 			grid-gap: 10px;
+			overflow: auto;
 
 			details {
 
@@ -111,12 +115,12 @@
 					padding: 0;
 					display: flex;
 					flex-direction: column;
-					gap: 6px;
+					gap: 4px;
 
 					li.fd-tbox-item {
 						list-style-type: none;
 						display: inline-flex;
-						padding: 8px;
+						padding: 6px 8px;
 						background-color: white;
 						cursor: default;
 						gap: 6px;
