--- a/src/less/formdesigner.less
+++ b/src/less/formdesigner.less
@@ -137,13 +137,6 @@
 		}
 	}
 
-	.fd-toolbar {
-		grid-column: 1 / span 2;
-		grid-row: 1;
-		border-bottom: 1px solid @canvas-bg;
-		padding: 7px 14px 7px 14px;
-	}
-
 	.fd-propsheet {
 		width: 100%;
 
@@ -319,6 +312,10 @@
 				padding: 0 5px;
 				height: 2em;
 				overflow: hidden;
+
+				&.multiline {
+					height: 61px;
+				}
 			}
 
 			.form-group {
